# greensenti

./: .env.template  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  mypi.ini  pyproject.toml  setup.cfg  workflow.py  workflow_load.py
.github/workflows/: ci.yml  release.yml
examples/: B02_10m.jp2  B03_10m.jp2  B04_10m.jp2  B08_10m.jp2
geojson/: ejido.geojson  teatinos.geojson
greensenti/: __init__.py  __main__.py  helpers.py  settings.py
greensenti/cli/: band_arithmetic.py  compute_index.py  dhus.py  download_products.py  product.py  raster.py
src/greensenti/: __init__.py  __main__.py  band_arithmetic.py  dhus.py  raster.py
tests/: generate_test_data.py  test_band_arithmetic.py  test_bri.py  test_bsi.py  test_cli.py  test_cloud_cover_percentage.py  test_cloud_mask.py  test_cri1.py  test_dhus.py  test_evi.py  test_evi2.py  test_mndwi.py  test_moisture.py  test_ndre.py  test_ndsi.py  test_ndvi.py  test_ndwi.py  test_ndyi.py  test_osavi.py  test_raster.py  test_ri.py  test_true_color.py
tests/data/: AOT_10m.jp2  AOT_20m.jp2  AOT_60m.jp2  B01_60m.jp2  B02_20m.jp2  B03_10m.jp2  B03_20m.jp2  B04_10m.jp2  B04_20m.jp2  B05_20m.jp2  B05_60m.jp2  B06_20m.jp2  B06_60m.jp2  B07_20m.jp2  B07_60m.jp2  B08_10m.jp2  B09_60m.jp2  B1.jp2  B11_20m.jp2  B11_60m.jp2  B12_20m.jp2  B12_60m.jp2  B2.jp2  B3.jp2  B8A_20m.jp2  B8A_60m.jp2  SCL_20m.jp2  SCL_60m.jp2  TCI_10m.jp2  TCI_20m.jp2  TCI_60m.jp2  WVP_10m.jp2  WVP_20m.jp2  WVP_60m.jp2  box.geojson
