[tool.poetry]
name = "greensenti"
version = "0.1.1"
readme = "README.md"
description = "README"
homepage = "https://github.com/benhid/greensenti/"
repository = "https://github.com/benhid/greensenti/"
authors = ["Antonio Benítez Hidalgo <antoniobenitezhid@gmail.com>"]
classifiers=[
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Typing :: Typed",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
]
include = [
    "LICENSE"
]

[tool.poetry.dependencies]
python = "^3.7.1"
pydantic = {extras = ["dotenv"], version = "^1.8.1"}
typer="^0.3.2"
sentinelsat="^0.14"
Shapely="^1.7.1"
pandas="^1.2.3"
pyproj="^3.0.1"
rasterio="^1.2.1"
numpy = "^1.20.2"
matplotlib = "^3.4.1"
pymongo = "^3.10.1"
minio = "^6.0.0"
simplejson = "^3.17.3"

[tool.poetry.dev-dependencies]
black = "^20.8.b1"
mypy = "^0.780"
isort = "^5.5.2"
pytest = "^6.1.0"

[tool.poetry.scripts]
greensenti = "greensenti.__main__:app"

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"