[metadata]
name = greensenti
version = 0.4.2
description = Greensenti cli
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/benhid/greensenti
author = Antonio Benítez Hidalgo
author_email = antoniobenitezhid@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    Intended Audience :: Science/Research

    License :: OSI Approved :: MIT License

    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
project_urls =
    Source = https://github.com/benhid/greensenti
    Tracker = https://github.com/benhid/greensenti/issues

[options]
zip_safe = False
package_dir=
    =src
packages = find:
platforms = any
include_package_data = True
install_requires =
    fire>=0.4.0
    sentinelsat>=1.1.1
    Shapely>=1.8.0
    pandas>=1.4.0
    pyproj>=3.3.0
    rasterio>=1.2.10
    numpy>=1.22.2
    matplotlib>=3.5.1
    simplejson>=3.17.6
python_requires = >=3.8
setup_requires =
    setuptools

[bdist_wheel]
universal = 1

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
     greensenti = greensenti.__main__:main

[options.extras_require]
dev =
    isort
    black
    mypy
test =
    pytest>=7.0.0
all =
    %(dev)s
    %(test)s
